# sniff-gh-copilot-usage

./: Cargo.toml  README.md
src/: main.rs
